[package]
name = "mondrian"
version = "1.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Piet Mondrian Artworks"
repository = "https://github.com/GalAster/mondrian-rs"
readme = "../../Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
rand = { version = "0.7", features = ["wasm-bindgen"] }
rand_distr = "0.3"
svg = "0.8"

[dev-dependencies]

[features]
default = []
