[package]
name = "mondrian-web"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Piet Mondrian Artworks"
repository = "https://github.com/GalAster/mondrian-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
yew = "0.17"
mondrian = {version = "1.1", path = "../mondrian-rs"}

[dev-dependencies]

[features]
default = []
